deploy/environments/prod/resources/helloworld/ingress.yaml
##
# We need to set some configuration and paths here that we can't express
# through the helm chart. Disabling the ingress from the helm chart and
# deploying it this way.
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/hostname: google.gradeous.io
  labels:
    app: helloworld-ingress
  name: helloworld
  namespace: application
spec:
  rules:
  - host: helloworld.google.gradeous.io
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-helloworld-chart
          servicePort: 8080
